docs: implements swagger and documents API

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -24,7 +24,20 @@ spring:
   config:
     import: optional:dotenv://
 
+
+  web:
+    resources:
+      static-locations:
+        - classpath:/static/
+        - file:uploads/
+
+
 system:
   security:
     secret: ${JWT_SECRET}
 
+springdoc:
+  api-docs:
+    path: /v3/api-docs
+  swagger-ui:
+    path: /swagger-ui.html
