refactor: implements swagger in NotificationController e add forgot feat in AuthControllerDoc, organization of folders made

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -31,6 +31,11 @@ spring:
         - classpath:/static/
         - file:uploads/
 
+  servlet:
+    multipart:
+      max-file-size: 5MB
+      max-request-size: 5MB
+
 
 system:
   security:
